--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
-body {
-    background-color:darkslategrey;
+
+.inline-block {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.logo {
+    width: 5%;
+    padding: 1%;
+    text-align: center;
+}
+
+nav {
+    width: 73%;
+    padding: 1%;
+}
+
+ul {
+    width: 50%;
+    margin-left: auto;
+    text-decoration: none;
+}
+
+.heroImg {
+    height: 600px;
+    padding: 25%;
+}
+
+.content {
+    width: 500px;
+    margin: 0 auto;
+}
+
+footer {
+    background-color: #373738;
+    padding: 25px;
+    color: aquamarine;
 }
