--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .logo {
-    width: 5%;
+    width: 23%;
     padding: 1%;
     text-align: center;
 }
@@ -13,12 +13,15 @@
 nav {
     width: 73%;
     padding: 1%;
+    background-color:aquamarine;
+    color: #373738;
 }
 
 ul {
     width: 50%;
     margin-left: auto;
-    text-decoration: none;
+    list-style: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .heroImg {
