--- a/css/style.css
+++ b/css/style.css
@@ -6,22 +6,32 @@
 
 .logo {
     width: 23%;
+    height: 100px;
     padding: 1%;
-    text-align: center;
+}
+
+.logo img {
+    width: 25%;
 }
 
 .navigation {
     background-color: aquamarine;
 }
 
+
 nav {
-    width: 73%;
+    width: 72%;
     padding: 1%;
     color: #373738;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+    word-spacing: 20px;
+    text-align: right;
+    align-content: center;
 }
 
 ul {
-    width: 50%;
+    width:25%;
     margin-left: auto;
     list-style: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -29,18 +39,20 @@ ul {
 
 .heroImg {
     height: 600px;
-    padding: 25%;
+    padding: 25px;
+    overflow: auto;
 }
 
 .content {
+    display: block;
     width: 500px;
     margin: 0 auto;
     text-align: center;
 }
 
-img {
+ img {
     width: 0 auto;
-}
+} 
 
 button {
     background-color:darkslategrey;
@@ -53,4 +65,19 @@ footer {
     padding: 25px;
     color: aquamarine;
     text-align: center;
+}
+
+ul footer {
+    display: inline-block;
+    vertical-align: top;
+    padding: 0 auto;
+}
+
+p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 18px;
+}
+
+.content img {
+    width: 100%;
 }
