--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 .inline-block {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 .logo {
@@ -31,7 +31,6 @@ nav {
 }
 
 ul {
-    width:25%;
     margin-left: auto;
     list-style: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -47,7 +46,7 @@ ul {
     display: block;
     width: 500px;
     margin: 0 auto;
-    text-align: center;
+    text-align: left;
 }
 
  img {
@@ -60,17 +59,18 @@ button {
     padding: 12px;
 }
 
-footer {
-    background-color: #373738;
-    padding: 25px;
-    color: aquamarine;
-    text-align: center;
+
+
+footer ul {
+    width: 100%;
+    display: flex;
+    vertical-align: top;
+    justify-content: center;
+    padding: 0 auto;
 }
 
-ul footer {
-    display: inline-block;
-    vertical-align: top;
-    padding: 0 auto;
+footer li {
+    margin: 0 25px;
 }
 
 p {
@@ -80,4 +80,16 @@ p {
 
 .content img {
     width: 100%;
+}
+
+footer {
+    background-color: #373738;
+    padding: 25px;
+    color: aquamarine;
+}
+
+.parent-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
